# emit

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  aliases.js  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: all.yml  batcher.yml  book-check.yml  book-deploy.yml  core.yml  emit.yml  file.yml  fuzz.yml  (+5 more)
batcher/: Cargo.toml  README.md
batcher/src/: internal_metrics.rs  lib.rs  sync.rs  tokio.rs  web.rs
benches/: mod.rs
book/: book.toml  mermaid.min.js
chrono/: enum.Weekday.html  struct.Duration.html  trait.Datelike.html  trait.Timelike.html
core/: Cargo.toml  README.md
emit/: all.html  enum.LogLevel.html  enum.LogLevelFilter.html  index.html  macro.debug.html  macro.emit.html  macro.error.html  macro.info.html  macro.trace.html  macro.warn.html  sidebar-items.js
emitter/file/: Cargo.toml  README.md
emitter/file/src/: internal_metrics.rs  lib.rs
emitter/file/test/integration/: Cargo.toml
emitter/file/test/integration/src/: main.rs
emitter/opentelemetry/: Cargo.toml  README.md
emitter/opentelemetry/src/: internal_metrics.rs  lib.rs
emitter/otlp/: Cargo.toml  README.md
emitter/otlp/fuzz/: Cargo.toml
emitter/otlp/fuzz/in/: valid0  valid1  valid2
emitter/otlp/fuzz/src/: main.rs
emitter/otlp/src/: baggage.rs  client.rs  data.rs  env.rs  error.rs  internal_metrics.rs  lib.rs
emitter/otlp/src/client/: channel.rs  http.rs  logs.rs  metrics.rs  stub.rs  tokio.rs  traces.rs  web.rs
emitter/otlp/src/client/http/: stub.rs  tokio.rs  web.rs
emitter/otlp/src/data/: any_value.rs  generated.rs  logs.rs  metrics.rs  resource.rs  traces.rs
emitter/otlp/src/data/logs/: log_record.rs
emitter/otlp/src/data/metrics/: metric.rs
emitter/otlp/src/data/traces/: span.rs
emitter/otlp/test/integration/: Cargo.toml  config.tls.yaml  config.yaml
emitter/otlp/test/integration/src/: main.rs
emitter/otlp/test/throughput/: Cargo.toml  config.yaml
emitter/otlp/test/throughput/src/: main.rs
emitter/otlp/test/web/: .gitignore  Cargo.toml  README.md  config.yaml  index.html  index.js  index.mjs  package.json
emitter/otlp/test/web/native/: Cargo.toml  lib.rs
emitter/term/: Cargo.toml  README.md
emitter/term/src/: lib.rs
examples/: README.md
examples/common_patterns/: Cargo.toml  dbg.rs  emit.rs  emit_debug_values.rs  emit_errors.rs  emit_errors_anyhow.rs  emit_json.rs  emit_multiple_emitters.rs  emit_non_identifier_keys.rs  emit_optional_values.rs  emit_serde_values.rs  filter_by_level.rs  filter_by_property.rs  filter_per_emitter.rs  level_custom.rs  lib.rs  metric_counter.rs  metric_counter_delta.rs  metric_counter_delta_shared.rs  metric_counter_manual.rs  metric_delta_counter.rs  metric_delta_counter_shared.rs  metric_distribution.rs  metric_distribution_delta_shared.rs  metric_distribution_resampling.rs  metric_distribution_resampling_delta_shared.rs  metric_props.rs  metric_source.rs  span.rs  span_additional_props.rs  span_auto_result_completion.rs  span_fallible_anyhow.rs  span_fallible_completion.rs  span_kind.rs  span_links.rs  span_manual.rs  span_manual_completion.rs  span_manual_creation.rs  span_manual_creation_full.rs  span_manual_full.rs  (+8 more)
examples/opentelemetry/via_sdk/: Cargo.toml  README.md
examples/opentelemetry/via_sdk/src/: main.rs
examples/opentelemetry/web/: Cargo.toml  README.md  config.yaml  index.html
examples/opentelemetry/web/src/: lib.rs
fuzz/: Cargo.toml  README.md  canary.sh  quickcheck.sh
fuzz/bucket_set/: main.rs
fuzz/bucket_set/in/: 1  2  3  4
fuzz/otel_baggage/: main.rs
fuzz/otel_baggage/in/: 3
fuzz/span_link_set/: main.rs
fuzz/span_link_set/in/: 1  2  3
fuzz/src/: lib.rs
fuzz/timestamp/: main.rs
fuzz/timestamp/in/: 1
macros/: Cargo.toml  README.md
macros/src/: args.rs  build.rs  capture.rs  dbg.rs  doc_dbg.md  doc_emit.md  doc_evt.md  doc_fmt.md  doc_metric.md  doc_new_sample.md  doc_new_span.md  doc_sample.md  doc_span.md  doc_span_guard.md  doc_tpl.md  emit.rs  event.rs  fmt.rs  format.rs  hook.rs  key.rs  lib.rs  mdl.rs  nullable.rs  optional.rs  props.rs  sample.rs  span.rs  template.rs  util.rs
num/: trait.CheckedAdd.html  trait.CheckedDiv.html  trait.CheckedMul.html  trait.CheckedSub.html  trait.FromPrimitive.html  trait.Integer.html  trait.Num.html  trait.NumCast.html  trait.One.html  trait.Signed.html  trait.ToPrimitive.html  trait.Unsigned.html  trait.Zero.html
src/: buf.rs  elements.rs  err.rs  events.rs  frame.rs  kind.rs  level.rs  lib.rs  macro_hooks.rs  message_templates.rs  metric.rs  payloads.rs  pipeline.rs  platform.rs  setup.rs  span.rs  templates.rs  test_support.rs  timer.rs
test/ui/: Cargo.toml  out.rs
test/ui/src/: emit.rs  event.rs  format.rs  lib.rs  metric.rs  new_sample.rs  new_span.rs  props.rs  sample.rs  span.rs  span_guard.rs  start_span.rs  tpl.rs  util.rs
test/ui/src/compile_fail/std/: dbg_control_param.rs  dbg_control_param.stderr  dbg_props_duplicate.rs  dbg_props_duplicate.stderr  dbg_props_file.rs  dbg_props_file.stderr  dbg_props_fmt.rs  dbg_props_fmt.stderr  dbg_props_line.rs  dbg_props_line.stderr  dbg_props_non_debug.rs  dbg_props_non_debug.stderr  emit_control_param_attrs.rs  emit_control_param_attrs.stderr  emit_control_param_unknown.rs  emit_control_param_unknown.stderr  emit_empty.rs  emit_empty.stderr  emit_evt_mdl.rs  emit_evt_mdl.stderr  emit_props_duplicate_interpolated_attr.rs  emit_props_duplicate_interpolated_attr.stderr  emit_props_duplicate_interpolated_defined.rs  emit_props_duplicate_interpolated_defined.stderr  emit_props_key_non_str.rs  emit_props_key_non_str.stderr  emit_props_mdl.rs  emit_props_mdl.stderr  emit_props_missing.rs  emit_props_missing.stderr  emit_props_missing_interpolated.rs  emit_props_missing_interpolated.stderr  emit_props_msg.rs  emit_props_msg.stderr  emit_props_non_display_interpolated.rs  emit_props_non_display_interpolated.stderr  emit_props_non_optional.rs  emit_props_non_optional.stderr  emit_props_non_static.rs  emit_props_non_static.stderr  (+43 more)
test/ui/src/compile_pass/std/: dbg.rs
traceparent/: Cargo.toml  README.md
traceparent/src/: lib.rs
(+267 files in other folders)
