[workspace]
members = [
    "core",
    "batcher",
    "traceparent",
    "emitter/term",
    "emitter/file",
    "emitter/file/test/integration",
    "emitter/otlp",
    "emitter/otlp/gen",
    "emitter/otlp/test/integration",
    "emitter/otlp/test/throughput",
    "emitter/otlp/test/web",
    "macros",
    "examples/common_patterns",
    "examples/opentelemetry/direct_otlp",
    "examples/trace_zipkin",
    "examples/metric_prometheus",
    "test/ui",
]

[package]
name = "emit"
version = "1.9.0"
authors = ["emit contributors"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emit-rs/emit"
description = "Developer-first diagnostics for Rust applications."
keywords = ["logging", "tracing", "metrics", "observability"]
categories = ["development-tools::debugging"]
edition = "2021"

[package.metadata.docs.rs]
features = ["std", "rand", "sval", "serde", "implicit_rt", "implicit_internal_rt"]

[features]
default = ["std", "rand", "implicit_rt", "implicit_internal_rt"]
std = ["alloc", "emit_macros/std", "emit_core/std"]
alloc = ["emit_core/alloc"]
sval = ["emit_macros/sval", "emit_core/sval", "dep:sval"]
serde = ["emit_macros/serde", "emit_core/serde", "dep:serde"]
implicit_rt = ["emit_core/implicit_rt", "emit_macros/implicit_rt"]
implicit_internal_rt = ["emit_core/implicit_internal_rt"]

[dependencies.emit_macros]
version = "1.9.0"
path = "macros"

[dependencies.emit_core]
version = "1.9.0"
path = "core"
default-features = false

[dependencies.sval]
version = "2"
optional = true
default-features = false

[dependencies.serde]
version = "1"
optional = true
default-features = false

[dependencies.rand]
version = "0.9"
optional = true

[dev-dependencies.serde]
version = "1"
features = ["derive"]

[dev-dependencies.tokio]
version = "1"
features = ["full"]

[dev-dependencies.sval_test]
version = "2"

[dev-dependencies.serde_test]
version = "1"

[profile.release]
debug = true
