[package]
name = "emit_batcher"
version = "1.3.1"
authors = ["emit contributors"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emit-rs/emit"
description = "Batch processing infrastructure for emit."
edition = "2021"

[package.metadata.docs.rs]
features = ["tokio"]

[features]
web = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:js-sys", "dep:web-sys"]

[dependencies.emit]
version = "1.3.1"
path = "../"
default-features = false

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "sync", "time"]
optional = true

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.wasm-bindgen-futures]
version = "0.4"
optional = true

[dependencies.js-sys]
version = "0.3"
optional = true

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  "Window"
]

[dev-dependencies.tokio]
version = "1"
features = ["full"]
