[package]
name = "emit_batcher"
version = "1.4.1"
authors = ["emit contributors"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emit-rs/emit"
description = "Batch processing infrastructure for emit."
edition = "2021"

[package.metadata.docs.rs]
features = ["tokio"]

[features]
web = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:js-sys", "dep:futures"]

[dependencies.emit]
version = "1.4.1"
path = "../"
default-features = false

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "sync", "time"]
optional = true

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.wasm-bindgen-futures]
version = "0.4"
optional = true

[dependencies.js-sys]
version = "0.3"
optional = true

[dependencies.futures]
version = "0.3"
optional = true

[dev-dependencies.wasm-bindgen-test]
version = "0.3"

[target.'cfg(not(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown")))'.dev-dependencies.tokio]
version = "1"
features = ["full"]
