[package]
name = "emit_macros"
version = "1.3.0"
authors = ["emit contributors"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emit-rs/emit"
description = "Internal proc macro crate for emit."
keywords = ["logging", "tracing", "metrics", "observability"]
categories = ["development-tools::debugging"]
edition = "2021"

[package.metadata.docs.rs]
features = ["std", "sval", "serde", "implicit_rt"]

[lib]
proc-macro = true

[features]
std = []
serde = []
sval = []
implicit_rt = []

[dependencies.proc-macro2]
version = "1"

[dependencies.quote]
version = "1"

[dependencies.syn]
version = "2"
features = ["full", "extra-traits", "visit-mut"]

[dependencies.emit_core]
version = "1.3.0"
path = "../core"

[dependencies.fv-template]
version = "0.5.1"
