[package]
name = "emit_example_common_patterns"
version = "0.11.5"
authors = ["emit contributors"]
edition = "2021"
publish = false

[dependencies.emit]
path = "../../"
features = ["serde", "std"]

[dependencies.emit_term]
path = "../../emitter/term"

[dependencies.emit_file]
path = "../../emitter/file"

[dependencies.emit_traceparent]
path = "../../traceparent"

[dependencies.thiserror]
version = "2"

[dependencies.anyhow]
version = "1"

[dependencies.serde]
version = "1"
features = ["derive"]

[[example]]
name = "dbg"
path = "dbg.rs"

[[example]]
name = "emit"
path = "emit.rs"

[[example]]
name = "emit_errors"
path = "emit_errors.rs"

[[example]]
name = "emit_errors_anyhow"
path = "emit_errors_anyhow.rs"

[[example]]
name = "emit_multiple_emitters"
path = "emit_multiple_emitters.rs"

[[example]]
name = "emit_non_identifier_keys"
path = "emit_non_identifier_keys.rs"

[[example]]
name = "emit_optional_values"
path = "emit_optional_values.rs"

[[example]]
name = "emit_debug_values"
path = "emit_debug_values.rs"

[[example]]
name = "emit_serde_values"
path = "emit_serde_values.rs"

[[example]]
name = "filter_by_level"
path = "filter_by_level.rs"

[[example]]
name = "filter_by_property"
path = "filter_by_property.rs"

[[example]]
name = "filter_per_emitter"
path = "filter_per_emitter.rs"

[[example]]
name = "span"
path = "span.rs"

[[example]]
name = "span_fallible_completion"
path = "span_fallible_completion.rs"

[[example]]
name = "span_fallible_anyhow"
path = "span_fallible_anyhow.rs"

[[example]]
name = "span_manual_completion"
path = "span_manual_completion.rs"

[[example]]
name = "span_manual_creation"
path = "span_manual_creation.rs"

[[example]]
name = "span_manual_creation_full"
path = "span_manual_creation_full.rs"

[[example]]
name = "span_trace_propagation"
path = "span_trace_propagation.rs"

[[example]]
name = "span_trace_sampling"
path = "span_trace_sampling.rs"

[[example]]
name = "span_trace_filtering"
path = "span_trace_filtering.rs"

[[example]]
name = "testing"
path = "testing.rs"
