[package]
name = "emit_example_opentelemetry_via_sdk"
version = "0.11.0-alpha.18"
authors = ["emit contributors"]
edition = "2021"
publish = false

[dependencies.emit]
path = "../../../"

[dependencies.emit_opentelemetry]
path = "../../../emitter/opentelemetry"

[dependencies.opentelemetry_sdk]
version = "0.26"
features = ["rt-tokio", "trace", "logs"]

[dependencies.opentelemetry]
version = "0.26"
features = ["trace", "logs"]

[dependencies.opentelemetry-otlp]
version = "0.26"
features = ["trace", "logs", "grpc-tonic", "gzip-tonic"]

[dependencies.tonic]
version = "0.12"

[dependencies.tokio]
version = "1"
features = ["rt", "macros", "rt-multi-thread"]
