[package]
name = "emit_exmaple_opentelemetry_web"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.emit]
path = "../../../"

[dependencies.emit_otlp]
path = "../../../emitter/otlp"

[dependencies.wasm-bindgen]
version = "0.2"

[dependencies.wasm-bindgen-futures]
version = "0.4"

[dependencies.js-sys]
version = "0.3"

[dependencies.console_error_panic_hook]
version = "0.1"
